2008-10-08  Don Porter  <dgp@users.sourceforge.net>

	* unix/tkUnixWm.c:	Restored consistency of error messages from
	* macosx/tkMacOSXWm.c:	[wm iconphoto] with the test suite and across
	all platforms.  [Bug 2021443]

2008-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/canvImg.test:  Removed dependency on precision in results
	* tests/canvRect.test:
	* tests/canvText.test: 
	* tests/entry.test: 
	* tests/listbox.test: 
	* tests/scrollbar.test: 
	* tests/spinbox.test:
	* tests/winWm.test: Fixed incorrect error strings
	* tests/wm.test: 

2008-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winDialog.test: Fixed tests for Vista+
	* win/tkWinWm.c: corrected some errors from the previous commit

2008-10-05  Donal K. Fellows  <dkf@users.sf.net>

	* win/tkWinWm.c (WmAttributesCmd, WmOverrideredirectCmd)
	(WmStackorderCmd): 
	* win/tkWinSendCom.c (Async): 
	* win/tkWinSend.c (Tk_SendObjCmd): 
	* win/tkWinFont.c (TkpGetFontFamilies, TkpGetSubFonts): 
	* unix/tkUnixWm.c (WmOverrideredirectCmd, WmStackorderCmd): 
	* unix/tkUnixFont.c (TkpGetFontFamilies, TkpGetSubFonts): 
	* macosx/tkMacOSXWm.c (WmOverrideredirectCmd, WmStackorderCmd): 
	* generic/tkTextIndex.c (SetTextIndexFromAny): 
	* generic/tkTest.c (TrivialConfigObjCmd): 
	* generic/tkSelect.c (HandleTclCommand): 
	* generic/tkPanedWindow.c (Tk_PanedWindowObjCmd)
	(PanedWindowSashCommand, PanedWindowProxyCommand): 
	* generic/tkMenubutton.c (Tk_MenubuttonObjCmd): 
	* generic/tkMenu.c (MenuWidgetObjCmd): 
	* generic/tkListbox.c (ListboxWidgetObjCmd): 
	* generic/tkImgPhoto.c (ImgPhotoCmd): (mostly)
	* generic/tkImage.c (Tk_ImageObjCmd): 
	* generic/tkFont.c (Tk_FontObjCmd, GetAttributeInfoObj): 
	* generic/tkEntry.c (EntryWidgetObjCmd, SpinboxWidgetObjCmd): 
	* generic/tkConfig.c (SetOptionFromAny, Tk_SetOptions): 
	* generic/tkCmds.c (Tk_TkObjCmd, Tk_WinfoObjCmd, TkGetDisplayOf): 
	* generic/tkButton.c (ButtonCreate): Get rid of code that insists on