@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: canvText.test,v 1.19 2008/10/07 00:10:07 patthoyts Exp $
+# RCS: @(#) $Id: canvText.test,v 1.20 2008/10/08 16:13:42 dgp Exp $
 
 package require tcltest 2.2
 namespace import ::tcltest::*
@@ -862,7 +862,7 @@ test canvText-17.1 {TextToPostscript procedure} -setup {
 \[(000)\]
 \[(000)\]
 \[(00)\]
-] $ay -0.5 0 0 false DrawText
+] $ay -0.5 0.0 0 false DrawText
 grestore
 restore showpage
 
@@ -877,7 +877,7 @@ end
     .c itemconfig test -anchor n -fill black
     set x [.c postscript]
     set x [string range $x [string first "/Courier-Oblique" $x] end]
-	expr {$x eq $result}
+    expr {$x eq $result}
 } -result 1
 
 test canvText-18.1 {bug fix 2525, find enclosed on text with newlines} -setup {
